﻿Version 0.9.1 -

- New feature: combined prop/tree mode - replace props (in buildings or networks) with trees, or vice-versa
- BOB tool now recognises the underground (PageDown/PageUp to switch)
- Effect renders now updated on prop/tree change (lights can now be added/removed in-game)
- Prop/tree position highlighting is dimmed when shift is pressed and disabled while Alt is pressed


Version 0.9.0.4 -

- Mirrored network props now also mirror their rotation
- Fix preview sometimes showing incorrect prop angles
- Fix building prop list sometimes not showing original prop name


Version 0.9.0.3 -

- Fix network replacement original prefab regression


Version 0.9.0.2 -

- Improve handling of reversion states
- Fix network prop preview not correctly showing mirrored X offsets
- Fix network prop preview not showing angle changes


Version 0.9.0.1 -

- Fix index-out-of-range error related to previewing changes in sub-buildings
- Fix live previewing not auto-refreshing immediately after replacement
- Fix render highlights not following preview prop changes
- Fix previewing not resetting on sub-building selection change
- Fix 'no trees/props found' message sometimes not showing when replacer panel is opened


Version 0.9 -

- Compatible with game version 1.14 (Airports)
- Reconfigure UI for replacement in real-time
- Convert translation framework to CSV (for CrowdIn)
- Trees no longer have an angle setting (as this is ignored when a random tree rotation mod is active)
- Increase offset slider range and ensure values are properly updated when outside visible range
- Provide ability to change m_fixedHeight flags on building replacements
- Building and network special flags are now automatically regenerated on replacement
- Prop/tree highlighting better shows vertical position of prop/tree
- Fix occasional hang when toggling between trees and props in map mode
- Add additional check for invalid savegame data on deserialization


Version 0.8.6.3 -
